// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Definition widget should have a default snapshot: first render 1`] = `
<div>
  <span
    class="mock-KatexProvider"
  >
    <div
      class="perseus-renderer perseus-renderer-responsive"
    >
      <div
        class="paragraph"
        data-perseus-paragraph-index="0"
      >
        <div
          class="paragraph"
        >
          Read the excerpt and answer the question below. 
        </div>
      </div>
      <div
        class="paragraph"
        data-perseus-paragraph-index="1"
      >
        <div
          class="paragraph"
        >
          The Governor and Council of the Massachusetts had much conference many days; and at last . . . . concluded a peace and friendship with 
          <div
            class="perseus-widget-container widget-nohighlight widget-inline"
          >
            <span
              aria-controls="uid-popover-0-wb-id"
              aria-expanded="false"
              class="perseus-widget-definition"
              id="uid-popover-0-wb-id-anchor"
            >
              <button
                aria-disabled="false"
                class="button_vr44p2-o_O-shared_lwskrm-o_O-default_1hl5pu8-o_O-small_xwkmkn"
                role="button"
                tabindex="0"
                type="button"
              >
                <span
                  class="text_f1191h-o_O-LabelSmall_hl4zs1-o_O-text_m8a8ki-o_O-textWithFocus_e296pg"
                >
                  the Pequots
                </span>
              </button>
            </span>
          </div>
          , upon these conditions.
        </div>
      </div>
    </div>
  </span>
</div>
`;

exports[`Definition widget should have an open state snapshot: open state 1`] = `
<div>
  <span
    class="mock-KatexProvider"
  >
    <div
      class="perseus-renderer perseus-renderer-responsive"
    >
      <div
        class="paragraph"
        data-perseus-paragraph-index="0"
      >
        <div
          class="paragraph"
        >
          Read the excerpt and answer the question below. 
        </div>
      </div>
      <div
        class="paragraph"
        data-perseus-paragraph-index="1"
      >
        <div
          class="paragraph"
        >
          The Governor and Council of the Massachusetts had much conference many days; and at last . . . . concluded a peace and friendship with 
          <div
            class="perseus-widget-container widget-nohighlight widget-inline"
          >
            <span
              aria-controls="uid-popover-1-wb-id"
              aria-expanded="true"
              class="perseus-widget-definition"
              id="uid-popover-1-wb-id-anchor"
            >
              <button
                aria-disabled="false"
                class="button_vr44p2-o_O-shared_lwskrm-o_O-default_1hl5pu8-o_O-small_xwkmkn"
                role="button"
                tabindex="0"
                type="button"
              >
                <span
                  class="text_f1191h-o_O-LabelSmall_hl4zs1-o_O-text_m8a8ki-o_O-textWithFocus_e296pg-o_O-focus_15mc0l2"
                >
                  the Pequots
                </span>
              </button>
            </span>
          </div>
          , upon these conditions.
        </div>
      </div>
    </div>
  </span>
</div>
`;
